bk_ida/gccida/g2/recog
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48089:4: error: expected ';' after expression
rtx v170; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48089:5: error: use of undeclared identifier 'v170'
rtx v170; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48091:4: error: expected ';' after expression
rtx v172; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48091:5: error: use of undeclared identifier 'v172'
rtx v172; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48108:4: error: expected ';' after expression
rtx v189; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48108:5: error: use of undeclared identifier 'v189'
rtx v189; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48196:4: error: expected ';' after expression
rtx v277; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48196:5: error: use of undeclared identifier 'v277'
rtx v277; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48197:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v278; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48198:4: error: expected ';' after expression
rtx v279; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48198:5: error: use of undeclared identifier 'v279'
rtx v279; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48331:4: error: expected ';' after expression
rtx v412; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48331:5: error: use of undeclared identifier 'v412'
rtx v412; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48400:4: error: expected ';' after expression
rtx v481; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48400:5: error: use of undeclared identifier 'v481'
rtx v481; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48674:4: error: expected ';' after expression
rtx v755; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48674:5: error: use of undeclared identifier 'v755'
rtx v755; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48923:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.insn = 0LL; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/insn-recog.c:48940:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v10.rtwint = ( __int64)x0->fld[0]; 
                       ^~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/recog/src/obj/insn-recog.o] Error 1
